// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`gradientAgentControls characterization > emits stable full specs for layout=linear 1`] = `
[
  {
    "default": "16:9",
    "group": "Canvas",
    "hint": "Output proportions",
    "key": "canvas.aspect",
    "kind": "select",
    "label": "Aspect ratio",
    "options": [
      "14:9",
      "16:9",
      "9:16",
      "1:1",
      "4:5",
      "3:2",
      "21:9",
    ],
  },
  {
    "default": "linear",
    "group": "Canvas",
    "hint": "Overall composition: linear/radial/orbit/stack/liquid/mesh",
    "key": "canvas.layout",
    "kind": "select",
    "label": "Layout",
    "options": [
      "linear",
      "radial",
      "orbit",
      "stack",
      "liquid",
      "mesh",
    ],
  },
  {
    "default": 0,
    "group": "Canvas",
    "key": "canvas.margin",
    "kind": "slider",
    "label": "Margin",
    "max": 0.45,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": "#000000",
    "group": "Canvas",
    "key": "canvas.background",
    "kind": "color",
    "label": "Background",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "hint": "The gradient colours, in ramp order (1 = start). Set these to recolour the whole gradient.",
    "key": "layer.color.stops.0.color",
    "kind": "color",
    "label": "Colour 1",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.color.stops.1.color",
    "kind": "color",
    "label": "Colour 2",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.color.stops.2.color",
    "kind": "color",
    "label": "Colour 3",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.color.stops.3.color",
    "kind": "color",
    "label": "Colour 4",
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.angle",
    "kind": "slider",
    "label": "Flow angle",
    "max": 360,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.noiseScale",
    "kind": "slider",
    "label": "Noise scale",
    "max": 8,
    "min": 0.5,
    "step": 0.1,
  },
  {
    "default": 0,
    "group": "Flow",
    "hint": "Strength of the liquid warp; 0 = flat gradient",
    "key": "flow.intensity",
    "kind": "slider",
    "label": "Noise intensity",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.distortion",
    "kind": "slider",
    "label": "Curve distortion",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.detail",
    "kind": "slider",
    "label": "Detail",
    "max": 6,
    "min": 1,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.swirl",
    "kind": "slider",
    "label": "Swirl",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "hint": "Living drift speed (visible in video export)",
    "key": "flow.speed",
    "kind": "slider",
    "label": "Flow speed",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Relief",
    "key": "relief.grain",
    "kind": "slider",
    "label": "Grain",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Relief",
    "key": "relief.relief",
    "kind": "slider",
    "label": "Relief",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": "normal",
    "group": "Layer",
    "key": "layer.blend",
    "kind": "select",
    "label": "Blend",
    "options": [
      "normal",
      "lighten",
      "screen",
      "add",
      "multiply",
      "darken",
      "overlay",
    ],
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.opacity",
    "kind": "slider",
    "label": "Opacity",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Layer",
    "hint": "0 = smooth; higher = banded",
    "key": "layer.color.steps",
    "kind": "slider",
    "label": "Posterize steps",
    "max": 24,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.color.hueDrift",
    "kind": "slider",
    "label": "Hue drift",
    "max": 180,
    "min": -180,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.color.hueRotate",
    "kind": "slider",
    "label": "Hue rotate",
    "max": 360,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Soft-focus / defocus amount; 0 = perfectly sharp",
    "key": "focus.blur",
    "kind": "slider",
    "label": "Blur",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": "off",
    "group": "Focus",
    "hint": "off = blur the whole thing evenly; radial = keep a round spot sharp; linear = keep an angled band sharp (tilt-shift)",
    "key": "focus.shape",
    "kind": "select",
    "label": "Focus region",
    "options": [
      "off",
      "radial",
      "linear",
    ],
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Size of the in-focus region (needs a radial/linear shape)",
    "key": "focus.radius",
    "kind": "slider",
    "label": "Focus size",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "How gradually blur ramps in past the focus region",
    "key": "focus.softness",
    "kind": "slider",
    "label": "Focus falloff",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Focus centre, left↔right",
    "key": "focus.x",
    "kind": "slider",
    "label": "Focus X",
    "max": 0.5,
    "min": -0.5,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Focus centre, up↔down",
    "key": "focus.y",
    "kind": "slider",
    "label": "Focus Y",
    "max": 0.5,
    "min": -0.5,
    "step": 0.01,
  },
]
`;

exports[`gradientAgentControls characterization > emits stable full specs for layout=liquid 1`] = `
[
  {
    "default": "16:9",
    "group": "Canvas",
    "hint": "Output proportions",
    "key": "canvas.aspect",
    "kind": "select",
    "label": "Aspect ratio",
    "options": [
      "14:9",
      "16:9",
      "9:16",
      "1:1",
      "4:5",
      "3:2",
      "21:9",
    ],
  },
  {
    "default": "linear",
    "group": "Canvas",
    "hint": "Overall composition: linear/radial/orbit/stack/liquid/mesh",
    "key": "canvas.layout",
    "kind": "select",
    "label": "Layout",
    "options": [
      "linear",
      "radial",
      "orbit",
      "stack",
      "liquid",
      "mesh",
    ],
  },
  {
    "default": "#000000",
    "group": "Canvas",
    "key": "canvas.background",
    "kind": "color",
    "label": "Background",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "hint": "The gradient colours, in ramp order (1 = start). Set these to recolour the whole gradient.",
    "key": "layer.color.stops.0.color",
    "kind": "color",
    "label": "Colour 1",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.color.stops.1.color",
    "kind": "color",
    "label": "Colour 2",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.color.stops.2.color",
    "kind": "color",
    "label": "Colour 3",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.color.stops.3.color",
    "kind": "color",
    "label": "Colour 4",
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.angle",
    "kind": "slider",
    "label": "Flow angle",
    "max": 360,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.noiseScale",
    "kind": "slider",
    "label": "Noise scale",
    "max": 8,
    "min": 0.5,
    "step": 0.1,
  },
  {
    "default": 0,
    "group": "Flow",
    "hint": "Strength of the liquid warp; 0 = flat gradient",
    "key": "flow.intensity",
    "kind": "slider",
    "label": "Noise intensity",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.distortion",
    "kind": "slider",
    "label": "Curve distortion",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.detail",
    "kind": "slider",
    "label": "Detail",
    "max": 6,
    "min": 1,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.swirl",
    "kind": "slider",
    "label": "Swirl",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "hint": "Living drift speed (visible in video export)",
    "key": "flow.speed",
    "kind": "slider",
    "label": "Flow speed",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Liquid",
    "key": "flow.depth",
    "kind": "slider",
    "label": "Depth",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Liquid",
    "key": "flow.highlights",
    "kind": "slider",
    "label": "Highlights",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Liquid",
    "key": "flow.shadows",
    "kind": "slider",
    "label": "Shadows",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Liquid",
    "key": "flow.foldScale",
    "kind": "slider",
    "label": "Fold scale",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Liquid",
    "key": "flow.gloss",
    "kind": "slider",
    "label": "Gloss",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Liquid",
    "key": "flow.veins",
    "kind": "slider",
    "label": "Veins",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Liquid",
    "key": "flow.veinScale",
    "kind": "slider",
    "label": "Vein scale",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Liquid",
    "key": "flow.ripple",
    "kind": "slider",
    "label": "Ripple",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Liquid",
    "key": "flow.refract",
    "kind": "slider",
    "label": "Refraction",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Liquid",
    "key": "flow.viscosity",
    "kind": "slider",
    "label": "Viscosity",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Liquid",
    "key": "relief.light.azimuth",
    "kind": "slider",
    "label": "Light angle",
    "max": 360,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Liquid",
    "key": "relief.light.elevation",
    "kind": "slider",
    "label": "Light height",
    "max": 90,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Relief",
    "key": "relief.grain",
    "kind": "slider",
    "label": "Grain",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": "normal",
    "group": "Layer",
    "key": "layer.blend",
    "kind": "select",
    "label": "Blend",
    "options": [
      "normal",
      "lighten",
      "screen",
      "add",
      "multiply",
      "darken",
      "overlay",
    ],
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.opacity",
    "kind": "slider",
    "label": "Opacity",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Layer",
    "hint": "0 = smooth; higher = banded",
    "key": "layer.color.steps",
    "kind": "slider",
    "label": "Posterize steps",
    "max": 24,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.color.hueDrift",
    "kind": "slider",
    "label": "Hue drift",
    "max": 180,
    "min": -180,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.color.hueRotate",
    "kind": "slider",
    "label": "Hue rotate",
    "max": 360,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Soft-focus / defocus amount; 0 = perfectly sharp",
    "key": "focus.blur",
    "kind": "slider",
    "label": "Blur",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": "off",
    "group": "Focus",
    "hint": "off = blur the whole thing evenly; radial = keep a round spot sharp; linear = keep an angled band sharp (tilt-shift)",
    "key": "focus.shape",
    "kind": "select",
    "label": "Focus region",
    "options": [
      "off",
      "radial",
      "linear",
    ],
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Size of the in-focus region (needs a radial/linear shape)",
    "key": "focus.radius",
    "kind": "slider",
    "label": "Focus size",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "How gradually blur ramps in past the focus region",
    "key": "focus.softness",
    "kind": "slider",
    "label": "Focus falloff",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Focus centre, left↔right",
    "key": "focus.x",
    "kind": "slider",
    "label": "Focus X",
    "max": 0.5,
    "min": -0.5,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Focus centre, up↔down",
    "key": "focus.y",
    "kind": "slider",
    "label": "Focus Y",
    "max": 0.5,
    "min": -0.5,
    "step": 0.01,
  },
]
`;

exports[`gradientAgentControls characterization > emits stable full specs for layout=mesh 1`] = `
[
  {
    "default": "16:9",
    "group": "Canvas",
    "hint": "Output proportions",
    "key": "canvas.aspect",
    "kind": "select",
    "label": "Aspect ratio",
    "options": [
      "14:9",
      "16:9",
      "9:16",
      "1:1",
      "4:5",
      "3:2",
      "21:9",
    ],
  },
  {
    "default": "linear",
    "group": "Canvas",
    "hint": "Overall composition: linear/radial/orbit/stack/liquid/mesh",
    "key": "canvas.layout",
    "kind": "select",
    "label": "Layout",
    "options": [
      "linear",
      "radial",
      "orbit",
      "stack",
      "liquid",
      "mesh",
    ],
  },
  {
    "default": "#000000",
    "group": "Canvas",
    "key": "canvas.background",
    "kind": "color",
    "label": "Background",
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.angle",
    "kind": "slider",
    "label": "Flow angle",
    "max": 360,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.noiseScale",
    "kind": "slider",
    "label": "Noise scale",
    "max": 8,
    "min": 0.5,
    "step": 0.1,
  },
  {
    "default": 0,
    "group": "Flow",
    "hint": "Strength of the liquid warp; 0 = flat gradient",
    "key": "flow.intensity",
    "kind": "slider",
    "label": "Noise intensity",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.distortion",
    "kind": "slider",
    "label": "Curve distortion",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.detail",
    "kind": "slider",
    "label": "Detail",
    "max": 6,
    "min": 1,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.swirl",
    "kind": "slider",
    "label": "Swirl",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "hint": "Living drift speed (visible in video export)",
    "key": "flow.speed",
    "kind": "slider",
    "label": "Flow speed",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Mesh",
    "key": "layer.mesh.softness",
    "kind": "slider",
    "label": "Softness",
    "max": 100,
    "min": 10,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Mesh",
    "key": "layer.mesh.contrast",
    "kind": "slider",
    "label": "Contrast",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Mesh",
    "key": "layer.mesh.blur",
    "kind": "slider",
    "label": "Blur",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Mesh",
    "key": "layer.mesh.drift",
    "kind": "slider",
    "label": "Drift",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Relief",
    "key": "relief.grain",
    "kind": "slider",
    "label": "Grain",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": "normal",
    "group": "Layer",
    "key": "layer.blend",
    "kind": "select",
    "label": "Blend",
    "options": [
      "normal",
      "lighten",
      "screen",
      "add",
      "multiply",
      "darken",
      "overlay",
    ],
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.opacity",
    "kind": "slider",
    "label": "Opacity",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Layer",
    "hint": "0 = smooth; higher = banded",
    "key": "layer.color.steps",
    "kind": "slider",
    "label": "Posterize steps",
    "max": 24,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.color.hueDrift",
    "kind": "slider",
    "label": "Hue drift",
    "max": 180,
    "min": -180,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.color.hueRotate",
    "kind": "slider",
    "label": "Hue rotate",
    "max": 360,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Soft-focus / defocus amount; 0 = perfectly sharp",
    "key": "focus.blur",
    "kind": "slider",
    "label": "Blur",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": "off",
    "group": "Focus",
    "hint": "off = blur the whole thing evenly; radial = keep a round spot sharp; linear = keep an angled band sharp (tilt-shift)",
    "key": "focus.shape",
    "kind": "select",
    "label": "Focus region",
    "options": [
      "off",
      "radial",
      "linear",
    ],
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Size of the in-focus region (needs a radial/linear shape)",
    "key": "focus.radius",
    "kind": "slider",
    "label": "Focus size",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "How gradually blur ramps in past the focus region",
    "key": "focus.softness",
    "kind": "slider",
    "label": "Focus falloff",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Focus centre, left↔right",
    "key": "focus.x",
    "kind": "slider",
    "label": "Focus X",
    "max": 0.5,
    "min": -0.5,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Focus centre, up↔down",
    "key": "focus.y",
    "kind": "slider",
    "label": "Focus Y",
    "max": 0.5,
    "min": -0.5,
    "step": 0.01,
  },
]
`;

exports[`gradientAgentControls characterization > emits stable full specs for layout=orbit 1`] = `
[
  {
    "default": "16:9",
    "group": "Canvas",
    "hint": "Output proportions",
    "key": "canvas.aspect",
    "kind": "select",
    "label": "Aspect ratio",
    "options": [
      "14:9",
      "16:9",
      "9:16",
      "1:1",
      "4:5",
      "3:2",
      "21:9",
    ],
  },
  {
    "default": "linear",
    "group": "Canvas",
    "hint": "Overall composition: linear/radial/orbit/stack/liquid/mesh",
    "key": "canvas.layout",
    "kind": "select",
    "label": "Layout",
    "options": [
      "linear",
      "radial",
      "orbit",
      "stack",
      "liquid",
      "mesh",
    ],
  },
  {
    "default": 0,
    "group": "Canvas",
    "key": "canvas.margin",
    "kind": "slider",
    "label": "Margin",
    "max": 0.45,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": "#000000",
    "group": "Canvas",
    "key": "canvas.background",
    "kind": "color",
    "label": "Background",
  },
  {
    "default": 0,
    "group": "Canvas",
    "key": "canvas.innerRadius",
    "kind": "slider",
    "label": "Inner radius",
    "max": 0.9,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Canvas",
    "key": "canvas.center.x",
    "kind": "slider",
    "label": "Center X",
    "max": 0.5,
    "min": -0.5,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Canvas",
    "key": "canvas.center.y",
    "kind": "slider",
    "label": "Center Y",
    "max": 0.5,
    "min": -0.5,
    "step": 0.01,
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "hint": "The gradient colours, in ramp order (1 = start). Set these to recolour the whole gradient.",
    "key": "layer.color.stops.0.color",
    "kind": "color",
    "label": "Colour 1",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.color.stops.1.color",
    "kind": "color",
    "label": "Colour 2",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.color.stops.2.color",
    "kind": "color",
    "label": "Colour 3",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.color.stops.3.color",
    "kind": "color",
    "label": "Colour 4",
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.angle",
    "kind": "slider",
    "label": "Flow angle",
    "max": 360,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.noiseScale",
    "kind": "slider",
    "label": "Noise scale",
    "max": 8,
    "min": 0.5,
    "step": 0.1,
  },
  {
    "default": 0,
    "group": "Flow",
    "hint": "Strength of the liquid warp; 0 = flat gradient",
    "key": "flow.intensity",
    "kind": "slider",
    "label": "Noise intensity",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.distortion",
    "kind": "slider",
    "label": "Curve distortion",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.detail",
    "kind": "slider",
    "label": "Detail",
    "max": 6,
    "min": 1,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.swirl",
    "kind": "slider",
    "label": "Swirl",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "hint": "Living drift speed (visible in video export)",
    "key": "flow.speed",
    "kind": "slider",
    "label": "Flow speed",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Relief",
    "key": "relief.grain",
    "kind": "slider",
    "label": "Grain",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Relief",
    "key": "relief.relief",
    "kind": "slider",
    "label": "Relief",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": "normal",
    "group": "Layer",
    "key": "layer.blend",
    "kind": "select",
    "label": "Blend",
    "options": [
      "normal",
      "lighten",
      "screen",
      "add",
      "multiply",
      "darken",
      "overlay",
    ],
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.opacity",
    "kind": "slider",
    "label": "Opacity",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Layer",
    "hint": "0 = smooth; higher = banded",
    "key": "layer.color.steps",
    "kind": "slider",
    "label": "Posterize steps",
    "max": 24,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.color.hueDrift",
    "kind": "slider",
    "label": "Hue drift",
    "max": 180,
    "min": -180,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.color.hueRotate",
    "kind": "slider",
    "label": "Hue rotate",
    "max": 360,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Soft-focus / defocus amount; 0 = perfectly sharp",
    "key": "focus.blur",
    "kind": "slider",
    "label": "Blur",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": "off",
    "group": "Focus",
    "hint": "off = blur the whole thing evenly; radial = keep a round spot sharp; linear = keep an angled band sharp (tilt-shift)",
    "key": "focus.shape",
    "kind": "select",
    "label": "Focus region",
    "options": [
      "off",
      "radial",
      "linear",
    ],
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Size of the in-focus region (needs a radial/linear shape)",
    "key": "focus.radius",
    "kind": "slider",
    "label": "Focus size",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "How gradually blur ramps in past the focus region",
    "key": "focus.softness",
    "kind": "slider",
    "label": "Focus falloff",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Focus centre, left↔right",
    "key": "focus.x",
    "kind": "slider",
    "label": "Focus X",
    "max": 0.5,
    "min": -0.5,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Focus centre, up↔down",
    "key": "focus.y",
    "kind": "slider",
    "label": "Focus Y",
    "max": 0.5,
    "min": -0.5,
    "step": 0.01,
  },
]
`;

exports[`gradientAgentControls characterization > emits stable full specs for layout=radial 1`] = `
[
  {
    "default": "16:9",
    "group": "Canvas",
    "hint": "Output proportions",
    "key": "canvas.aspect",
    "kind": "select",
    "label": "Aspect ratio",
    "options": [
      "14:9",
      "16:9",
      "9:16",
      "1:1",
      "4:5",
      "3:2",
      "21:9",
    ],
  },
  {
    "default": "linear",
    "group": "Canvas",
    "hint": "Overall composition: linear/radial/orbit/stack/liquid/mesh",
    "key": "canvas.layout",
    "kind": "select",
    "label": "Layout",
    "options": [
      "linear",
      "radial",
      "orbit",
      "stack",
      "liquid",
      "mesh",
    ],
  },
  {
    "default": 0,
    "group": "Canvas",
    "key": "canvas.margin",
    "kind": "slider",
    "label": "Margin",
    "max": 0.45,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": "#000000",
    "group": "Canvas",
    "key": "canvas.background",
    "kind": "color",
    "label": "Background",
  },
  {
    "default": 0,
    "group": "Canvas",
    "key": "canvas.innerRadius",
    "kind": "slider",
    "label": "Inner radius",
    "max": 0.9,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Canvas",
    "key": "canvas.center.x",
    "kind": "slider",
    "label": "Center X",
    "max": 0.5,
    "min": -0.5,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Canvas",
    "key": "canvas.center.y",
    "kind": "slider",
    "label": "Center Y",
    "max": 0.5,
    "min": -0.5,
    "step": 0.01,
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "hint": "The gradient colours, in ramp order (1 = start). Set these to recolour the whole gradient.",
    "key": "layer.color.stops.0.color",
    "kind": "color",
    "label": "Colour 1",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.color.stops.1.color",
    "kind": "color",
    "label": "Colour 2",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.color.stops.2.color",
    "kind": "color",
    "label": "Colour 3",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.color.stops.3.color",
    "kind": "color",
    "label": "Colour 4",
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.angle",
    "kind": "slider",
    "label": "Flow angle",
    "max": 360,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.noiseScale",
    "kind": "slider",
    "label": "Noise scale",
    "max": 8,
    "min": 0.5,
    "step": 0.1,
  },
  {
    "default": 0,
    "group": "Flow",
    "hint": "Strength of the liquid warp; 0 = flat gradient",
    "key": "flow.intensity",
    "kind": "slider",
    "label": "Noise intensity",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.distortion",
    "kind": "slider",
    "label": "Curve distortion",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.detail",
    "kind": "slider",
    "label": "Detail",
    "max": 6,
    "min": 1,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.swirl",
    "kind": "slider",
    "label": "Swirl",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "hint": "Living drift speed (visible in video export)",
    "key": "flow.speed",
    "kind": "slider",
    "label": "Flow speed",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Relief",
    "key": "relief.grain",
    "kind": "slider",
    "label": "Grain",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Relief",
    "key": "relief.relief",
    "kind": "slider",
    "label": "Relief",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": "normal",
    "group": "Layer",
    "key": "layer.blend",
    "kind": "select",
    "label": "Blend",
    "options": [
      "normal",
      "lighten",
      "screen",
      "add",
      "multiply",
      "darken",
      "overlay",
    ],
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.opacity",
    "kind": "slider",
    "label": "Opacity",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Layer",
    "hint": "0 = smooth; higher = banded",
    "key": "layer.color.steps",
    "kind": "slider",
    "label": "Posterize steps",
    "max": 24,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.color.hueDrift",
    "kind": "slider",
    "label": "Hue drift",
    "max": 180,
    "min": -180,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.color.hueRotate",
    "kind": "slider",
    "label": "Hue rotate",
    "max": 360,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Soft-focus / defocus amount; 0 = perfectly sharp",
    "key": "focus.blur",
    "kind": "slider",
    "label": "Blur",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": "off",
    "group": "Focus",
    "hint": "off = blur the whole thing evenly; radial = keep a round spot sharp; linear = keep an angled band sharp (tilt-shift)",
    "key": "focus.shape",
    "kind": "select",
    "label": "Focus region",
    "options": [
      "off",
      "radial",
      "linear",
    ],
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Size of the in-focus region (needs a radial/linear shape)",
    "key": "focus.radius",
    "kind": "slider",
    "label": "Focus size",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "How gradually blur ramps in past the focus region",
    "key": "focus.softness",
    "kind": "slider",
    "label": "Focus falloff",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Focus centre, left↔right",
    "key": "focus.x",
    "kind": "slider",
    "label": "Focus X",
    "max": 0.5,
    "min": -0.5,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Focus centre, up↔down",
    "key": "focus.y",
    "kind": "slider",
    "label": "Focus Y",
    "max": 0.5,
    "min": -0.5,
    "step": 0.01,
  },
]
`;

exports[`gradientAgentControls characterization > emits stable specs with includePreset 1`] = `
[
  {
    "default": "linear",
    "group": "Preset",
    "hint": "The overall look. marble/oil/ink/lava/satin = liquid surfaces; ripple/stack = concentric; mesh = soft blobs; linear = simple ramp. Set this to establish a style, then override colours/blur/grain. Leave it alone when only ADJUSTING an existing gradient.",
    "key": "preset",
    "kind": "select",
    "label": "Style preset",
    "options": [
      "marble",
      "oil",
      "ink",
      "lava",
      "satin",
      "liquid",
      "ripple",
      "stack",
      "mesh",
      "linear",
      "aurora",
      "frosted",
      "sunset",
    ],
  },
  {
    "default": "16:9",
    "group": "Canvas",
    "hint": "Output proportions",
    "key": "canvas.aspect",
    "kind": "select",
    "label": "Aspect ratio",
    "options": [
      "14:9",
      "16:9",
      "9:16",
      "1:1",
      "4:5",
      "3:2",
      "21:9",
    ],
  },
  {
    "default": "linear",
    "group": "Canvas",
    "hint": "Overall composition: linear/radial/orbit/stack/liquid/mesh",
    "key": "canvas.layout",
    "kind": "select",
    "label": "Layout",
    "options": [
      "linear",
      "radial",
      "orbit",
      "stack",
      "liquid",
      "mesh",
    ],
  },
  {
    "default": 0,
    "group": "Canvas",
    "key": "canvas.margin",
    "kind": "slider",
    "label": "Margin",
    "max": 0.45,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": "#000000",
    "group": "Canvas",
    "key": "canvas.background",
    "kind": "color",
    "label": "Background",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "hint": "The gradient colours, in ramp order (1 = start). Set these to recolour the whole gradient.",
    "key": "layer.color.stops.0.color",
    "kind": "color",
    "label": "Colour 1",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.color.stops.1.color",
    "kind": "color",
    "label": "Colour 2",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.color.stops.2.color",
    "kind": "color",
    "label": "Colour 3",
  },
  {
    "default": "#ffffff",
    "group": "Colours",
    "key": "layer.color.stops.3.color",
    "kind": "color",
    "label": "Colour 4",
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.angle",
    "kind": "slider",
    "label": "Flow angle",
    "max": 360,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.noiseScale",
    "kind": "slider",
    "label": "Noise scale",
    "max": 8,
    "min": 0.5,
    "step": 0.1,
  },
  {
    "default": 0,
    "group": "Flow",
    "hint": "Strength of the liquid warp; 0 = flat gradient",
    "key": "flow.intensity",
    "kind": "slider",
    "label": "Noise intensity",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.distortion",
    "kind": "slider",
    "label": "Curve distortion",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.detail",
    "kind": "slider",
    "label": "Detail",
    "max": 6,
    "min": 1,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "key": "flow.swirl",
    "kind": "slider",
    "label": "Swirl",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Flow",
    "hint": "Living drift speed (visible in video export)",
    "key": "flow.speed",
    "kind": "slider",
    "label": "Flow speed",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Relief",
    "key": "relief.grain",
    "kind": "slider",
    "label": "Grain",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Relief",
    "key": "relief.relief",
    "kind": "slider",
    "label": "Relief",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": "normal",
    "group": "Layer",
    "key": "layer.blend",
    "kind": "select",
    "label": "Blend",
    "options": [
      "normal",
      "lighten",
      "screen",
      "add",
      "multiply",
      "darken",
      "overlay",
    ],
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.opacity",
    "kind": "slider",
    "label": "Opacity",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Layer",
    "hint": "0 = smooth; higher = banded",
    "key": "layer.color.steps",
    "kind": "slider",
    "label": "Posterize steps",
    "max": 24,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.color.hueDrift",
    "kind": "slider",
    "label": "Hue drift",
    "max": 180,
    "min": -180,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Layer",
    "key": "layer.color.hueRotate",
    "kind": "slider",
    "label": "Hue rotate",
    "max": 360,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Soft-focus / defocus amount; 0 = perfectly sharp",
    "key": "focus.blur",
    "kind": "slider",
    "label": "Blur",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": "off",
    "group": "Focus",
    "hint": "off = blur the whole thing evenly; radial = keep a round spot sharp; linear = keep an angled band sharp (tilt-shift)",
    "key": "focus.shape",
    "kind": "select",
    "label": "Focus region",
    "options": [
      "off",
      "radial",
      "linear",
    ],
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Size of the in-focus region (needs a radial/linear shape)",
    "key": "focus.radius",
    "kind": "slider",
    "label": "Focus size",
    "max": 1,
    "min": 0,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "How gradually blur ramps in past the focus region",
    "key": "focus.softness",
    "kind": "slider",
    "label": "Focus falloff",
    "max": 100,
    "min": 0,
    "step": 1,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Focus centre, left↔right",
    "key": "focus.x",
    "kind": "slider",
    "label": "Focus X",
    "max": 0.5,
    "min": -0.5,
    "step": 0.01,
  },
  {
    "default": 0,
    "group": "Focus",
    "hint": "Focus centre, up↔down",
    "key": "focus.y",
    "kind": "slider",
    "label": "Focus Y",
    "max": 0.5,
    "min": -0.5,
    "step": 0.01,
  },
]
`;
